2013-01-19  Khaled Hosny  <khaledhosny@eglug.org>

	 * src/dvi.c, src/dvicodes.h: Support DVI-IVD inspired text reflection
	 for XeTeX.
	 * src/vf.c: Adapt

2013-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reduce dvipdfmx/xdvipdfmx diffs.
	* src/agl.c: Definition of hval_free() moved up.
	* src/pdffont.h: Added #ifdef XETEX ... #endif.
	* src/t1_load.c: Added #ifdef XETEX ... #else ... #endif.
	* src/dpxconf.[ch], src/dpxcrypt.[ch]: Copied from ../dvipdfmx.
	* src/sfnt.c: '#if HAVE_CONFIG_H' => '#ifdef HAVE_CONFIG_H'.

2013-01-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* read_v2_post_names() in tt_post.c: Change calculation of post->count
	for special fonts with unused index.

2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/cid.c: Avoid casts (const char *) -> (char *).

2013-01-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid various gcc-4.6 warnings.
	* src/cidtype2.c, src/dvipdfmx.c, src/fontmap.c, src/otl_conf.c,
	src/pdfencoding.c, src/spc_pdfm.c, src/tt_cmap.c: Do not use
	unsafe casts (char **) -> (const char **).
	* src/bmpimage.c, src/cidtype0.c, src/cidtype2.c, src/dvi.c,
	src/jpegimage.c, src/pdffont.c, src/pkfont.c, src/tt_aux.c,
	src/tt_cmap.c, src/tt_glyf.c, src/tt_post.c, src/type1.c,
	src/type1c.c: Drop set but unused variables.
	src/pdfdraw.c: Do not test '(&v) != NULL', this is always true.

2012-12-12  Khaled Hosny  <khaledhosny@eglug.org>

	* src/tt_cmap.c: Make sure CMapName of embedded CMaps does not contain
	slashes.

2012-12-11  Khaled Hosny  <khaledhosny@eglug.org>

	* src/tt_cmap.c: Fix crash with fonts that has some glyphs without name
	entries in 'post' table.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/Makefile.am: Avoid use of deprecated INCLUDES.

2012-09-21  Karl Berry  <karl@tug.org>

	* many files: remove useless $Header$ from old repo,
	do not point to dvipdfmx@ email address any more.

2012-09-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ChangeLog.TL (removed): Now merged ...